--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <button id="startGameButton" type="button">Start Game</button>
 
-    <h2>Your Score:</h2>
+    <h2>Score:</h2>
     <h2 id="score">0</h2>
 
    
