--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Whac-a-mole</title>
+    <title>Whac-A-Mole</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="startGameButton" type="button">Start Game</button>
 
     <h2>Score:</h2>
     <h2 id="score">0</h2>
