--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Whac-A-Mole</title>
-    <link rel="stylesheet" href="styles.css">
+    
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    
+     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -27,6 +31,10 @@
         <div class="square" id="8"></div>
         <div class="square" id="9"></div>
     </div>
-    <script src="app.js"></script>
+      <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+      <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+      <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script src="app.js"></script>
 </body>
 </html>
